Fix T74221 Crash when changing Image Source in UV editor